arrs/sonarr/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name:  arr-pod
        image: linuxserver/sonarr
        nodeSelector: azero
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: shows
          mountPath: /shows
        - name: anime 
          mountPath: /anime
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /config
      volumes:
        - name: config
          hostPath:
            path: /opt/mediaservices/sonarr
        - name: shows
          hostPath:
            path: /mnt/nas/Series
        - name: anime 
          hostPath:
            path: /mnt/nas/Anime
        - name: downloads 
          hostPath:
            path: /mnt/downloads
